* Update title * Remove dark mode as the implementation wasn't great * Resolve a bug with the animations when switching weeks

--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -1,11 +1,6 @@
 .app {
     height: 100%;
-    transition: background-color 0.5s ease-in, color 0.5s ease-in;
-}
-
-.appDarkMode {
-    background: var(--color-grey-dark);
-    color: var(--color-off-white);
+    overflow: auto;
 }
 
 .container {
