--- a/src/components/comment/new-comment.module.css
+++ b/src/components/comment/new-comment.module.css
@@ -14,7 +14,7 @@
 }
 
 .submit {
-    border: 0;
+    border: 0 !important;
     color: white;
     padding: 8px 16px;
 }
