--- a/src/global-css/global.css
+++ b/src/global-css/global.css
@@ -4,10 +4,9 @@
     box-sizing: border-box;
 }
 
-html,
-body,
 #root {
-    min-height: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
 
 body {
@@ -21,6 +20,7 @@ button {
     cursor: pointer;
     border: 1px solid black;
     padding: 6px 12px;
+    transition: background 0.5s ease-in, color 0.5s ease-in;
 }
 
 button:hover {
